--- a/app/sign-in.html
+++ b/app/sign-in.html
@@ -35,6 +35,7 @@
                         <p>Неправильный пароль</p>
                     </div>
                 </div>
+                <button class="button">Войти</button>
             </form>
         </div>
     </div>
