Create icon button

--- a/app/sign-in.html
+++ b/app/sign-in.html
@@ -30,6 +30,11 @@
                     <label for="password" class="field-label">Пароль</label>
                     <div class="field-root">
                         <input name="password" id="password" type="text" class="field-input" placeholder="Введите пароль">
+                        <div class="field-adornment">
+                            <button type="button" class="icon-button">
+                                <img src="assets/img/icons/view-off.svg" alt="Show password">
+                            </button>
+                        </div>
                     </div>
                     <div class="field-helper field-helper--danger">
                         <p>Неправильный пароль</p>
