--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Qazaq Stroy | Sign in</title>
+  <title>Navigation</title>
   <link rel="stylesheet" href="assets/css/reset.min.css">
   <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
